refactor: offline work