@@ -1,50 +1,20 @@
 package com.conaxgames.libraries.message;
 
-import com.google.common.base.Joiner;
-import org.bukkit.ChatColor;
-import org.bukkit.inventory.ItemStack;
-
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
-import java.util.TreeMap;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public enum FormatUtil {
-    ;
-    private static final Pattern FORMATTING = Pattern.compile("^.*(?<format>(\u00a7[0-9a-fklmor])+).*");
-    private final static TreeMap<Integer, String> ROMAN_NUMERALS = new TreeMap<>();
+public final class FormatUtil {
 
-    static {
-        ROMAN_NUMERALS.put(1000, "M");
-        ROMAN_NUMERALS.put(900, "CM");
-        ROMAN_NUMERALS.put(500, "D");
-        ROMAN_NUMERALS.put(400, "CD");
-        ROMAN_NUMERALS.put(100, "C");
-        ROMAN_NUMERALS.put(90, "XC");
-        ROMAN_NUMERALS.put(50, "L");
-        ROMAN_NUMERALS.put(40, "XL");
-        ROMAN_NUMERALS.put(10, "X");
-        ROMAN_NUMERALS.put(9, "IX");
-        ROMAN_NUMERALS.put(5, "V");
-        ROMAN_NUMERALS.put(4, "IV");
-        ROMAN_NUMERALS.put(1, "I");
-        ROMAN_NUMERALS.put(0, "");
-    }
+    private static final char SECTION = '\u00a7';
+    private static final Pattern FORMATTING = Pattern.compile("^.*(?<format>(" + SECTION + "[0-9a-fklmor])+).*");
+    private static final Pattern FORMAT_CODES = Pattern.compile("(" + SECTION + "|&)[0-9a-fklmor]");
+
+    private FormatUtil() {}
 
     public static String stripFormatting(String format) {
-        if (format == null || format.trim().isEmpty()) {
-            return "";
-        }
-        return format.replaceAll("(\u00a7|&)[0-9a-fklmor]", "");
-    }
-
-    public static String normalize(String format) {
-        if (format == null || format.trim().isEmpty()) {
-            return "";
-        }
-        return format.replaceAll("(\u00a7|&)([0-9a-fklmor])", "\u00a7$2");
+        if (format == null || format.isBlank()) return "";
+        return FORMAT_CODES.matcher(format).replaceAll("");
     }
 
     public static List<String> wordWrap(String s) {
@@ -56,174 +26,37 @@ public enum FormatUtil {
     }
 
     public static List<String> wordWrap(String s, int firstSegment, int lineSize) {
-        String format = getFormat(s);
-        if (format == null || !s.startsWith(format)) {
-            format = "";
-        }
-        List<String> words = new ArrayList<>();
+        var format = getFormatPrefix(s);
+        var words = new ArrayList<String>();
         int numChars = firstSegment;
+        int start = 0;
         int ix = 0;
-        int jx = 0;
+
         while (ix < s.length()) {
             ix = s.indexOf(' ', ix + 1);
-            if (ix != -1) {
-                String subString = s.substring(jx, ix).trim();
-                String f = getFormat(subString);
-                int chars = stripFormatting(subString).length() + 1;
-                if (chars >= numChars) {
-                    if (f != null && subString.startsWith(f)) {
-                        format = f;
-                    }
-                    if (!subString.isEmpty()) {
-                        words.add(withFormat(format, subString));
-                        numChars = lineSize;
-                        jx = ix + 1;
-                    }
-                }
-            } else {
-                break;
+            if (ix == -1) break;
+
+            var sub = s.substring(start, ix).trim();
+            int visibleLen = stripFormatting(sub).length() + 1;
+            if (visibleLen >= numChars && !sub.isEmpty()) {
+                var f = getFormatPrefix(sub);
+                if (f != null && sub.startsWith(f)) format = f;
+                words.add(applyFormat(format, sub));
+                numChars = lineSize;
+                start = ix + 1;
             }
         }
-        words.add(withFormat(format, s.substring(jx).trim()));
+        words.add(applyFormat(format, s.substring(start).trim()));
         return words;
     }
 
-    public static List<String> wordWrapStrict(String s, int lineLength) {
-        List<String> lines = new ArrayList<>();
-        String format = getFormat(s);
-        if (format == null || !s.startsWith(format)) {
-            format = "";
-        }
-        String[] words = s.split(" ");
-        String line = "";
-        for (String word : words) {
-            String test = stripFormatting(line + " " + word).trim();
-            if (test.length() <= lineLength) {
-
-                line += (line.isEmpty() ? "" : " ") + word;
-            } else if (line.isEmpty() || stripFormatting(word).length() > lineLength) {
-
-                String f = getFormat(word);
-                String strip = stripFormatting(word);
-                do {
-                    int len = Math.min(strip.length(), lineLength - line.length() - 1);
-                    lines.add(withFormat(format, line + (line.isEmpty() ? "" : " ") + strip.substring(0, len)));
-                    strip = strip.substring(len);
-                    if (f != null) {
-                        format = f;
-                    }
-                } while (strip.length() > lineLength);
-                line = strip;
-            } else {
-
-                lines.add(withFormat(format, line));
-                String f = getFormat(line);
-                if (f != null) {
-                    format = f;
-                }
-                line = word;
-            }
-        }
-        if (!line.isEmpty()) {
-            lines.add(withFormat(format, line));
-        }
-        return lines;
+    private static String applyFormat(String format, String text) {
+        return (format != null && !text.startsWith(String.valueOf(SECTION))) ? format + text : text;
     }
 
-    private static String withFormat(String format, String subString) {
-        String sf = null;
-        if (!subString.startsWith("\u00a7")) {
-            sf = format + subString;
-        } else {
-            sf = subString;
-        }
-        return sf;
+    private static String getFormatPrefix(String s) {
+        if (s == null) return null;
+        var m = FORMATTING.matcher(s);
+        return m.matches() ? m.group("format") : null;
     }
-
-    private static String getFormat(String s) {
-        Matcher m = FORMATTING.matcher(s);
-        String format = null;
-        if (m.matches() && m.group("format") != null) {
-            format = m.group("format");
-        }
-        return format;
-    }
-
-    public static String join(List<String> list, String separator) {
-        String joined = "";
-        for (String s : list) {
-            joined += s + separator;
-        }
-        joined = !list.isEmpty() ? joined.substring(0, joined.length() - separator.length()) : joined;
-        return joined;
-    }
-
-    public static List<String> prefix(List<String> list, String prefix) {
-        List<String> prefixed = new ArrayList<>(list.size());
-        for (String s : list) {
-            prefixed.add(prefix + s);
-        }
-        return prefixed;
-    }
-
-    public static String camelcase(String name) {
-        if (name == null || name.isEmpty()) {
-            return "";
-        }
-        StringBuilder sb = new StringBuilder();
-        for (String part : name.split("[ _]")) {
-            sb.append(Character.toUpperCase(part.charAt(0)));
-            sb.append(part.substring(1).toLowerCase());
-        }
-        return sb.toString();
-    }
-
-    public static String escape(String formatString) {
-        String escaped = normalize(formatString);
-        escaped = escaped
-                .replaceAll("\u00a7", "&");
-        return escaped;
-    }
-
-    public static String possessiveString(String str) {
-        return str + (str.endsWith("s") ? "'" : "'s");
-    }
-
-    public static String formatTps(double tps) {
-        double roundedTps = Math.min(tps, 20.0);
-        ChatColor color = (tps > 18.0) ? ChatColor.GREEN : (tps > 16.0) ? ChatColor.YELLOW : ChatColor.RED;
-        String asterisk = (tps > 20.0) ? "*" : "";
-
-        return color + asterisk + String.format("%.2f", roundedTps);
-    }
-
-    public static String toRoman(int number) {
-        int l = ROMAN_NUMERALS.floorKey(number);
-        if (number == l) {
-            return ROMAN_NUMERALS.get(number);
-        }
-        return ROMAN_NUMERALS.get(l) + toRoman(number - l);
-    }
-
-    public static String getItemName(ItemStack item) {
-        return item.getType().toString().replace("_", "");
-    }
-
-    public static String andJoin(Collection<String> collection, boolean delimiterBeforeAnd) {
-        return andJoin(collection, delimiterBeforeAnd, ", ");
-    }
-
-    public static String andJoin(Collection<String> collection, boolean delimiterBeforeAnd, String delimiter) {
-        if (collection == null || collection.isEmpty()) {
-            return "";
-        }
-        List<String> contents = new ArrayList<String>(collection);
-        String last = contents.remove(contents.size() - 1);
-        StringBuilder builder = new StringBuilder(Joiner.on(delimiter).join(contents));
-        if (delimiterBeforeAnd) {
-            builder.append(delimiter);
-        }
-        return builder.append((collection.size() <= 1 ? "" : " and ")).append(last).toString();
-    }
-
 }
